# Spectrolysis

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: NamingConvention.txt  array2d.cpp  audio_player.cpp  audio_player.hpp  fft.cpp  fft.hpp  file_dialog.cpp  file_dialog.hpp  frame_buffer.cpp  main.cpp  microphone.cpp  microphone.hpp  shader.cpp  shader.hpp  smoothing.cpp  smoothing.hpp
src/gui/: gui.cpp  gui.hpp  gui_audio_interface.cpp  gui_color.hpp  gui_components.hpp  gui_frequency_plot.cpp  gui_theme.cpp  gui_theme.hpp  gui_viewport.cpp
src/shader_programs/: fragment_shader.c  rect.fs  rect.vs  shader_programs.h  vertex_shader.c
test/: CMakeLists.txt  array2d_test.cpp  pffft_test.cpp  smoothing_test.cpp
